<resources>
    <string name="app_name">CUpid</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="by_abgeo">By ABGEO</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="name_is_invalid">Name can not be empty.</string>
    <string name="email_is_taken">This email is already taken.</string>
    <string name="email_is_invalid">This email is not valid.</string>
    <string name="email_is_empty">Email can not be empty.</string>
    <string name="not_cu_email">You can Sign Up only with @cu.edu.ge email.</string>
    <string name="passwords_mismatch">Passwords does not match.</string>
    <string name="password_is_invalid">Password should be at least 6 characters.</string>
    <string name="password_is_empty">Password can not be empty.</string>
    <string name="gender_is_empty">Select the gender.</string>
    <string name="invalid_credentials">Invalid credentials was provided.</string>
    <string name="age_is_invalid">Age must be an positive number</string>
    <string name="save_profile">Save Profile</string>
    <string name="about">About</string>
    <string name="age">Age</string>
    <string name="profile_updated">Your profile has been updated successfully.</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_email_sent">Password reset instructions was sent to your email.</string>
    <string name="you_matched">Congratulations, you Matched!</string>
    <string name="go_to_profile">Go to the profile</string>
    <string name="no_people_to_show">No more People to show…</string>
    <string name="no_matches">You do not have matches yeat. Keep searching!</string>
    <string-array name="schools">
        <item>School Of Business</item>
        <item>School Of Law</item>
        <item>School of Media</item>
        <item>School Of Technology</item>
        <item>School Of Governance</item>
        <item>School of Humanities and Social Sciences</item>
        <item>School Of Tourism</item>
        <item>Medicine and Healthcare Management School</item>
        <item>School of New Cinema</item>
        <item>School of Economics</item>
        <item>Caucasus Education School</item>
    </string-array>
</resources>